--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -31,23 +31,19 @@ html, body
 			cursor pointer
 			background url(/images/grain.png) fixed #eee
 			box-shadow 0px 0px 4px -1px #ddd, 0px 8px 10px -10px #fff
-			width 120px
-			height 90px
+			width 120px - 2 * 4px
+			height 90px - 2 * 3px
 			position relative
 			top 0px
 			left 0px
 			text-align center
 			border-radius 3px
 			z-index 1
-			//transition top 0.5s, left 0.5s, width 0.5s, height 0.5s, z-index 0s 0.5s
+			padding 3px 4px
 			transition all delay
 			.img
-				display block
-				padding 3px 4px
 				transition all delay
-				height calc(100% \- 6px)
 			&:hover
-				//transition top 0.5s, left 0.5s, width 0.5s, height 0.5s, z-index 0s
 				width 240px
 				height 180px
 				top -45px
@@ -59,16 +55,16 @@ html, body
 				z-index 500
 				margin 0 -10000px -10000px 0 /* wtf?!? */
 				background url(/images/grain.png) fixed #000
+				padding 0px
 				.img
-					padding 0px 0px bottom-bar 0px
 					height calc(100% \- bottom-bar)
 
-.img img
+.container .img
+	background-size contain
+	background-position 50% 50%
+	background-repeat no-repeat
+	width 100%
 	height 100%
-	max-width 100%
-	max-height 100%
-	display block
-	margin auto
 
 #overlay
 	position fixed
