--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -66,6 +66,15 @@ html, body
 	width 100%
 	height 100%
 
+#throbber
+	display none
+	z-index 502
+	position fixed
+	width 200px
+	height 200px
+	top calc(50% \- 100px)
+	left calc(50% \- 100px)
+
 #overlay
 	position fixed
 	top 0
